force-app/main/default/objects/Dummy_Object__c/Dummy_Object__c.object-meta.xml
<CustomObject>
    <description>Temporary object used for display in VF pages</description>
    <label>Dummy Object</label>
    <nameField>
        <displayFormat>D-{00}</displayFormat>
        <label>Dummy Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dummy Object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>