force-app/main/default/objects/Dummy_Object__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dummy Object</relationshipLabel>
    <relationshipName>Dummy_Object</relationshipName>
    <type>Lookup</type>
</CustomField>