force-app/main/default/objects/Dummy_Object__c/fields/Internal_Placement__c.field-meta.xml
<CustomField>
    <fullName>Internal_Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Placement</label>
    <referenceTo>Internal_Placement__c</referenceTo>
    <relationshipLabel>Dummy Object</relationshipLabel>
    <relationshipName>Dummy_Object</relationshipName>
    <type>Lookup</type>
</CustomField>