force-app/main/default/objects/Dummy_Object__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Dummy Object</relationshipLabel>
    <relationshipName>Dummy_Object</relationshipName>
    <type>Lookup</type>
</CustomField>