force-app/main/default/objects/Dummy_Object__c/fields/Torc_User__c.field-meta.xml
<CustomField>
    <fullName>Torc_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Torc User</label>
    <referenceTo>Torc_User__c</referenceTo>
    <relationshipLabel>Dummy Object</relationshipLabel>
    <relationshipName>Dummy_Object</relationshipName>
    <type>Lookup</type>
</CustomField>