force-app/main/default/objects/Dummy_Object__c/fields/Vacation__c.field-meta.xml
<CustomField>
    <fullName>Vacation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vacation</label>
    <referenceTo>Engagement_Vacation__c</referenceTo>
    <relationshipLabel>Dummy Object</relationshipLabel>
    <relationshipName>Dummy_Object</relationshipName>
    <type>Lookup</type>
</CustomField>